# Recall

./: .gitignore  README.md  package.json  pnpm-lock.yaml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/brain/dumps/recall/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/brain/dumps/recall/: MainActivity.kt
android/app/src/main/java/com/brain/dumps/recall/home/: SideBar.kt
android/app/src/main/java/com/brain/dumps/recall/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/test/java/com/brain/dumps/recall/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
scripts/: build-all.sh  dev.sh  setup-db.sh
src/: App.css  App.tsx  app.css  app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  check_output.txt  check_output_utf8.txt  current_state.txt  current_state_utf8.txt  errors.txt  final_check.txt  final_check_utf8.txt  recall.db  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: attachments.rs  file_commands.rs  folders.rs  mod.rs  notes.rs  notes_commands.rs  search_commands.rs  tag_commands.rs  tags.rs  users.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/database/: connection.rs  mod.rs  models.rs  operations.rs  schema.rs
src-tauri/src/database/migrations/: 0001_initial_schema.sql  0002_add_tags.sql  migration_manager.rs  mod.rs
src-tauri/src/database/models/: attachment.rs  folder.rs  mod.rs  note.rs  tag.rs  user.rs
src-tauri/src/database/repository/: attachments_repository.rs  folders_repository.rs  mod.rs  notes_repository.rs  tags_repository.rs  users_repository.rs
src-tauri/src/db/: mod.rs  models.rs  operations.rs  schema.rs
src-tauri/src/menu/: builder.rs  mod.rs
src-tauri/src/utils/: error.rs  helpers.rs  mod.rs  validation.rs
src/components/notes-editor/: NotesEditor.tsx  notes-editor.module.css
src/components/sidebar/: Sidebar.tsx  sidebar.module.css
src/lib/: assets.ts  db.ts  sidebar.svelte  store.ts  types.ts
src/lib/components/: Editor.svelte  Sidebar.svelte
src/routes/: +page.svelte
