[package]
name = "recall"
version = "0.1.0"
description = "A Tauri notes taking app"
authors = ["Aryan Vishwakarma"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
thiserror = "2.0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.4"
regex = "1.0"
mime_guess = "2.0"
dirs = "6.0.0"
bcrypt = "0.18.0"  # For password hashing
uuid = { version = "1.0", features = ["v4", "serde"] }
