[package]
name = "recall"
version = "0.1.0"
description = "A Tauri notes taking app"
authors = ["Aryan Vishwakarma"]
edition = "2021"

[lib]
name = "recall_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "recall"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
regex = "1"
lazy_static = "1.4"
mime_guess = "2"
dirs = "5"
bcrypt = "0.15"
async-recursion = "1.1.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
